Style button and fix page spacing

--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,63 @@
 
 body {
     font-family: 'Manrope', sans-serif;
+    background-color: rgb(254, 255, 255);
 
 }
 
 h1 {
-    color: red;
+    color: rgb(0, 0, 39);
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+    font-size: 4rem;
 }
+
+h2 {
+    display: inline-block;
+}
+
+h3 {
+    font-weight: normal;
+}
+
+header {
+    text-align: center;
+}
+
+nav {
+    text-align: right;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    display: inline-block;
+    margin: 2rem;
+}
+
+main {
+    text-align: center;
+
+}
+
+button {
+    margin-top: 4rem;
+    padding: 2rem 3rem;
+    background-color: rgb(254, 255, 255);
+    font-size: 1.75rem;
+    border-radius: 3rem;
+    border: none;
+    box-shadow: .5rem .75rem 1.5rem #999999;
+}
+
+button:hover {
+    background-color: rgb(222, 222, 222);
+}
+
+button:active {
+    background-color: rgb(200 200 200);
+    box-shadow: 0.25rem .5rem 1rem #999999;
+}
+
